<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/untitled"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MenuActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/ibNews"
            style="@style/MainMenuButton"
            android:contentDescription="@string/menu_news_alternate"
            android:text="@string/menu_news" />

        <Button
            android:id="@+id/ibParties"
            style="@style/MainMenuButton"
            android:contentDescription="@string/menu_parties_alternate"
            android:src="@drawable/menu_item"
            android:text="@string/menu_parties" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/ibPictures"
            style="@style/MainMenuButton"
            android:contentDescription="@string/menu_pictures_alternate"
            android:src="@drawable/menu_item"
            android:text="@string/menu_pictures" />

        <Button
            android:id="@+id/ibArtists"
            style="@style/MainMenuButton"
            android:contentDescription="@string/menu_artists_alternate"
            android:src="@drawable/menu_item"
            android:text="@string/menu_artists" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <Button
                style="@style/MainMenuButton_two" />
            <Button
                style="@style/MainMenuButton_two" />
            <Button
                style="@style/MainMenuButton_two"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>